# Infecdead

./: .clang-format  .gitmodules  CMakeLists.txt
res/fonts/: high-tower-text.fnt
res/shaders/: basic.frag  basic.vert  character.frag  spritesheet.frag  spritesheet.vert  text.frag  text.vert
src/: main.cpp
src/entities/: character.cpp  character.hpp  player.cpp  player.hpp
src/game/: game.cpp  game.hpp
src/graphics/: bitmap_font.cpp  bitmap_font.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp
src/utility/: fileutils.cpp  fileutils.hpp  log.cpp  log.hpp  utility.hpp
tools/: build.bat  build.sh
